2004-02-12  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated.

2004-04-12  Dani Carbonell  <bocata@panete.net>

	* src/gtetrinet.c (keypress): Return only when Alt+1, +2 or +3 is
	pressed. This fixes the bug reported by Christian Kröner :)

	* src/fields.c (fields_page_contents): Changed the game's messages
	widget to expand instead of shrink. Enlarged its height up to 70
	pixels.

	* src/gtetrinet.c (main): Made the GTetrinet main window
	resizable. This doesn't mean that the fields will resize ;)

2004-03-30  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-25  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-08 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added "ga" to ALL_LINGUAS.

2004-02-07  Kjartan Maraas  <kmaraas@gnome.org>

	* src/Makefile.am: Remove deprecated flags. Broke the build.

2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>

	* configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2003-10-05  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.7.5.
	* configure.in: Released gtetrinet 0.7.5.

2003-09-01  Metin Amiroff  <metin@karegen.com>

	* configure.in: Added "az" in ALL_LINGUAS.

2003-08-30  Jordi Mallach  <jordi@sindominio.net>

	* src/dialogs.c (teamdialog_new): Activate the Cancel button when
	Esc is pressed.
	(connectdialog_button): Likewise.
	(connectdialog_new): Likewise.
	(prefdialog_new): Don't make the Close button the default action.
	Patches from Dagfinn Ilmari Mannsåker. Thanks!

2003-08-29  Dani Carbonell  <bocata@panete.net>

	* src/gtetrinet.c (keypress): fixing the key press signal handling
	code yet again :D Now the french users should be able to use the
	default number keys.

2003-08-29  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Add 0.7.4 items.

	* configure.in: Release gtetrinet 0.7.4.

2003-08-28  Dani Carbonell  <bocata@panete.net>

	* gtetrinet.schemas.in: disabled the channel list by default
